package com;
import java.awt.Color;
/**
 * Classe Chemin, represente un chemin dans le labyrinthe
 */
public class Chemin extends Case {

    /**
     * CONSTRUCTEURS
     */
    
    /** Constructeur vide de Chemin */
    Chemin() {
        super(true, Color.GRAY);
    }
}