package com;

public class Gobelin {
    
    public Gobelin(int d, int vie) {
        super("Gobelin", vie, d, "Le Gobelin est un monstre faible mais rapide");
    }
}
